06_functions/exercise/program01
program01.c:6:7: error: use of undeclared label 'ab'
    6 |         goto ab;/*gives error of undeclared label ab*/
      |              ^
1 error generated.
